--- a/dugou-model-centre/src/index.css
+++ b/dugou-model-centre/src/index.css
@@ -714,9 +714,9 @@
 }
 
 .c15-v1-raw-shell--sm {
-  --c15-v1-scale: 0.3536585;
-  width: 29px;
-  height: 29px;
+  --c15-v1-scale: 0.3414634;
+  width: 28px;
+  height: 28px;
 }
 
 .c15-v1-raw-shell--md {
@@ -2197,6 +2197,8 @@
   font-size: 14px;
   letter-spacing: -0.3px;
   color: #171717;
+  display: inline-block;
+  transform: translateX(2px);
 }
 
 /* Breadcrumb separator */
