ui: remove brand text offset for centered topbar alignment

--- a/dugou-model-centre/src/index.css
+++ b/dugou-model-centre/src/index.css
@@ -2198,7 +2198,7 @@
   letter-spacing: -0.3px;
   color: #171717;
   display: inline-block;
-  transform: translateX(12px);
+  transform: translateX(0);
 }
 
 /* Breadcrumb separator */
