ui: increase whitespace above global bottom bar

--- a/dugou-model-centre/src/index.css
+++ b/dugou-model-centre/src/index.css
@@ -2530,6 +2530,10 @@
   flex-shrink: 0;
 }
 
+.app-main-scroll {
+  padding-bottom: 34px;
+}
+
 .app-bottom-bar__inner {
   width: min(100%, 1320px);
   display: flex;
