--- a/dugou-model-centre/src/index.css
+++ b/dugou-model-centre/src/index.css
@@ -2528,10 +2528,11 @@
   justify-content: center;
   padding: 0 16px;
   flex-shrink: 0;
+  margin-top: clamp(80px, 11vh, 112px);
 }
 
 .app-main-scroll {
-  padding-bottom: 34px;
+  padding-bottom: 0;
 }
 
 .app-bottom-bar__inner {
